<resources>
	<string name="app_name" translatable="false">Diary</string>
	<!-- Strings related to login -->
	<string name="prompt_email">Email</string>
	<string name="prompt_password">Password</string>
	<string name="action_sign_in">Sign in</string>
	<string name="action_register">Register</string>
	<string name="registered_successfully">Registered successfully</string>
	<string name="welcome">Welcome to Diary! \nPlease choose how to sign in</string>
	<string name="invalid_username">Not a valid username</string>
	<string name="login_failed">"Login failed"</string>
	<string name="action_sign_in_short">Sign in</string>
	<string name="action_settings">Settings</string>
	<string name="add_note">Add note</string>
	<string name="notes_hint">Type your notes here</string>
	<string name="search_notes">Search notes</string>
	<string name="save_note">Save note</string>
	<string name="delete">Delete</string>
	<string name="grid_view">Grid view</string>
	<string name="dont_have_an_account">Don\'t have an account?</string>
	<string name="register">Register now</string>
	<string name="sign_in_icon">Sign in icon</string>
	<string name="sign_in_with_email">Sign in with email</string>
	<string name="continue_with_google">Continue with Google</string>
    <string name="nothing_found">Nothing found in your notes</string>
	<string name="sign_in_title">Sign in into account</string>
	<string name="navigate_back">Navigate back</string>
    <string name="mail_icon">Mail icon</string>
	<string name="password_icon">Password icon</string>
    <string name="notes_empty">You don\'t have any notes yet</string>
    <string name="register_new_account">Register new account</string>
	<string name="register_note">You need to confirm your email in order to register</string>
	<string name="verification_sent">Verification was sent to your email</string>
	<string name="verification_failed">Failed to send verification email</string>
	<string name="verify_email">Please verify your email</string>
	<string name="verification_status_failed">Failed to check verification status. Please try again</string>
	<string name="registration_failed">Registration failed. Please try again</string>
    <string name="info_icon">Info icon</string>
	<string name="weak_password">Your password must contain uppercase, lowercase, number and a special symbol</string>
	<string name="no_accounts_found">No Google accounts found on this device</string>
    <string name="sign_out">Sign out</string>
    <string name="title">Title</string>
    <string name="add_task">Add task</string>
	<string name="search_tasks">Search tasks</string>
    <string name="switch_mode">Switch mode</string>
    <string name="save">Save</string>
	<string name="new_task">New task</string>
    <string name="time">Time</string>
	<string name="date">Today</string>
	<string name="date_tomorrow">Tomorrow</string>
	<string name="date_yesterday">Yesterday</string>
	<string name="select_time">Select time</string>
	<string name="select_date">Select date</string>
	<string name="grant_reminders_permission">Please, grant a permission to set reminders</string>
	<string name="must_be_in_the_future">Scheduled time must be in the future</string>
	<string name="enter_task">Please, enter a task to continue</string>
	<string name="all_tasks_completed">All tasks completed</string>
	<string name="enjoy_your_day">Enjoy your day</string>
	<string name="pending">Pending</string>
	<string name="cancel">Cancel</string>
	<string name="tasks_filter_title">Filter tasks</string>
	<string name="completed">Completed</string>
	<string name="task_completed">Task completed!</string>
	<string name="undo">Undo</string>
	<string name="settings">Settings</string>
	<string name="app_theme">App theme</string>
	<string name="system_default">System default</string>
	<string name="light">Light</string>
	<string name="dark">Dark</string>
	<string name="appearance">Appearance</string>
	<string name="appearance_summary">Application colors and theme modes</string>
	<string name="about">About</string>
	<string name="about_summary">About application</string>
    <string name="theme">Theme</string>
	<string name="source_code">Source code</string>
	<string name="source_code_summary">Project repository on GitHub</string>
	<string name="contact_developer">Contact developer</string>
	<string name="contact_developer_summary">Give feedback to developer in Telegram</string>
	<string name="simple_elegant_productive">Simple. Elegant. Productive.</string>
	<string name="nothing_found_tasks">Nothing found in your tasks</string>
	<string name="type_to_start_search">Type to start search</string>
	<string name="mark_as_completed">Mark as completed</string>
    <string name="license">License</string>
	<string name="license_summary">This project is licensed under the MIT license</string>
	<string name="language">Language</string>
	<string name="language_summary">Select language of the application</string>
    <string name="notes">Notes</string>
	<string name="tasks">Tasks</string>
    <string name="register_icon">Register icon</string>
</resources>
