<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/fragment_container_register"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="?attr/colorSurfaceContainer"
	tools:context=".ui.fragments.RegisterFragment">

	<androidx.core.widget.NestedScrollView
		android:id="@+id/nestedScrollView"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		app:layout_behavior="@string/appbar_scrolling_view_behavior">

		<LinearLayout
			android:id="@+id/credentialsContainer"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<com.google.android.material.appbar.AppBarLayout
				android:id="@+id/titleBar"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@android:color/transparent"
				android:backgroundTint="@android:color/transparent"
				android:fitsSystemWindows="true">

				<com.google.android.material.appbar.MaterialToolbar
					android:id="@+id/toolbar"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:theme="@style/ThemeOverlay.CircleNavigationButton"
					android:paddingStart="8dp"
					app:navigationIcon="@drawable/arrow_back_24px"
					tools:ignore="RtlSymmetry" />

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="vertical"
					android:layout_marginVertical="8dp"
					android:layout_marginHorizontal="16dp"
					tools:ignore="UseCompoundDrawables">

					<ImageView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:contentDescription="@string/register_icon"
						android:src="@drawable/person_add_40px"
						app:tint="?colorPrimary" />

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginTop="8dp"
						android:text="@string/register_new_account"
						android:textAppearance="?attr/textAppearanceHeadlineMedium" />
				</LinearLayout>

			</com.google.android.material.appbar.AppBarLayout>

			<ImageView
				android:id="@+id/imageView"
				android:layout_width="260dp"
				android:layout_height="260dp"
				android:layout_margin="16dp"
				android:layout_gravity="center"
				android:src="@drawable/register"
				tools:ignore="ContentDescription" />

			<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/usernameContainer"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginHorizontal="16dp"
				app:endIconMode="clear_text"
				app:startIconDrawable="@drawable/alternate_email_24px"
				app:startIconContentDescription="@string/mail_icon">

				<com.google.android.material.textfield.TextInputEditText
					android:id="@+id/username"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/prompt_email"
					android:inputType="textEmailAddress"
					android:autofillHints="emailAddress"
					android:paddingStart="48dp"
					android:paddingEnd="16dp" />
			</com.google.android.material.textfield.TextInputLayout>

			<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/passwordContainer"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="8dp"
				android:layout_marginHorizontal="16dp"
				app:endIconMode="password_toggle"
				app:startIconDrawable="@drawable/password_24px"
				app:startIconContentDescription="@string/password_icon">

				<com.google.android.material.textfield.TextInputEditText
					android:id="@+id/password"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/prompt_password"
					android:imeOptions="actionDone"
					android:inputType="textPassword"
					android:autofillHints="password"
					android:selectAllOnFocus="true"
					android:paddingStart="48dp"
					android:paddingEnd="16dp"/>
			</com.google.android.material.textfield.TextInputLayout>
		</LinearLayout>
	</androidx.core.widget.NestedScrollView>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:layout_gravity="bottom">

		<LinearLayout
			android:id="@+id/infoContainer"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="16dp"
			android:layout_gravity="bottom"
			android:orientation="vertical"
			tools:ignore="UseCompoundDrawables">

			<ImageView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginVertical="16dp"
				android:contentDescription="@string/info_icon"
				android:src="@drawable/info_24px" />

			<TextView
				android:id="@+id/hintText"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textAppearance="?attr/textAppearanceBodyMedium"
				android:text="@string/register_note"
				android:textColor="?colorOnSurfaceVariant" />

		</LinearLayout>

		<Button
			style="@style/Widget.Material3Expressive.Button"
			android:id="@+id/register"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="16dp"
			android:enabled="false"
			android:text="@string/action_register"
			android:layout_gravity="bottom"
			android:theme="@style/SizeOverlay.Material3Expressive.Button.Medium" />

	</LinearLayout>

	<ProgressBar
		android:id="@+id/loading"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:visibility="gone" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>
