<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="?attr/colorSurfaceContainer"
	android:id="@+id/main"
	tools:context=".ui.activities.NoteActivity">

	<com.google.android.material.appbar.AppBarLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:fitsSystemWindows="true"
		android:background="?colorSurfaceContainer"
		android:id="@+id/appBarLayout">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			app:layout_collapseMode="pin">

			<com.google.android.material.appbar.MaterialToolbar
				android:id="@+id/topAppBar"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:minHeight="?attr/actionBarSize"
				android:layout_weight="1"
				android:paddingEnd="8dp"
				android:paddingStart="0dp"
				android:background="?colorSurfaceContainer"
				android:theme="@style/ThemeOverlay.CircleNavigationButton"
				app:navigationIcon="@drawable/arrow_back_24px"
				app:menu="@menu/menu_select_appbar" />

			<com.google.android.material.button.MaterialButton
				style="@style/Widget.Material3Expressive.Button"
				android:id="@+id/buttonSave"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:theme="@style/SizeOverlay.Material3Expressive.Button.Small"
				android:layout_gravity="center_vertical"
				android:layout_marginEnd="8dp"
				android:text="@string/save" />
		</LinearLayout>
		</com.google.android.material.appbar.AppBarLayout>

	<androidx.core.widget.NestedScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
		android:id="@+id/scrollView">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<com.onegravity.rteditor.RTEditText
				android:id="@+id/noteTitle"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginHorizontal="16dp"
				android:backgroundTint="@android:color/transparent"
				android:hint="@string/title"
				android:focusable="true"
				android:focusableInTouchMode="true"
				android:imeOptions="flagNoFullscreen"
				android:inputType="textCapSentences|textMultiLine"
				android:textAppearance="?textAppearanceHeadlineMedium" />

			<com.google.android.material.divider.MaterialDivider
				android:id="@+id/titleDivider"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_marginHorizontal="16dp"
				android:layout_marginVertical="16dp"
				app:dividerColor="@color/outline_variant"/>

			<com.onegravity.rteditor.RTEditText
				android:id="@+id/noteContent"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginHorizontal="16dp"
				android:backgroundTint="@android:color/transparent"
				android:hint="@string/notes_hint"
				android:focusable="true"
				android:focusableInTouchMode="true"
				android:imeOptions="flagNoFullscreen"
				android:inputType="textCapSentences|textMultiLine"
				android:textAppearance="?textAppearanceBodyLarge"
				android:accessibilityTraversalAfter="@id/floatingToolbar" />


		</LinearLayout>

	</androidx.core.widget.NestedScrollView>

	<com.google.android.material.floatingtoolbar.FloatingToolbarLayout
		style="?attr/floatingToolbarVibrantStyle"
		android:id="@+id/floatingToolbar"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center|bottom"
		android:layout_margin="16dp"
		android:accessibilityTraversalBefore="@id/noteContent"
		app:layout_behavior="com.google.android.material.behavior.HideViewOnScrollBehavior">

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:orientation="horizontal">

			<com.google.android.material.button.MaterialButton
				style="?attr/materialIconButtonStyle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:checkable="true"
				android:id="@+id/styleBold"
				app:icon="@drawable/format_bold_24px" />

			<com.google.android.material.button.MaterialButton
				style="?attr/materialIconButtonStyle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:checkable="true"
				android:id="@+id/styleItalic"
				app:icon="@drawable/format_italic_24px" />

			<com.google.android.material.button.MaterialButton
				style="?attr/materialIconButtonStyle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:checkable="true"
				android:id="@+id/styleUnderline"
				app:icon="@drawable/format_underlined_24px" />

		</LinearLayout>

	</com.google.android.material.floatingtoolbar.FloatingToolbarLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
